.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokes-deployment
  namespace: joker
  labels:
    app: jokes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jokes-pod
  template:
    metadata:
      labels:
        app: jokes-pod
    spec:
      containers:
      - name: jokes-container
        image: registry:5000/m4rt1nn/joke-service:1.0.0
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
