.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jokes-service
spec:
  selector:
    app: jokes
  ports:
    - protocol: TCP
      port: 1337      # Port on the service
      targetPort: 5000  # Port on the pod
      nodePort: 30080  # External port to access the service from outside the cluster (optional)
  type: NodePort  # This will expose the service on a node port
