.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jokes-ingress
  namespace: joker
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: jokes.ubk3s
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jokes-service
            port:
              number: 1337
